--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,9 @@
         background-color: #0a0d0d !important;
       }
 
-     
+     .textg {
+        color: #115067 !important;
+     }
       
       section {
         position: relative;
