--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@
         color: #55727f !important;
      }
       
+     .nav-link {
+      font-family: "Orbitron", sans-serif !important;
+     }
       section {
         position: relative;
         min-height: 100vh;
