--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@
      .nav-link {
       font-family: "Orbitron", sans-serif !important;
      }
+
+h1,h2,h3 {
+  font-family: "Orbitron", sans-serif !important;
+}
+
+
       section {
         position: relative;
         min-height: 100vh;
