--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@
       font-family: "Orbitron", sans-serif !important;
      }
 
+    .image-fade {
+  mask-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1) 20%, rgba(0,0,0,1) 80%, rgba(0,0,0,0));
+  -webkit-mask-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1) 20%, rgba(0,0,0,1) 80%, rgba(0,0,0,0));
+}
+
 h1,h2,h3 {
   font-family: "Orbitron", sans-serif !important;
 }
