--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@
   -webkit-mask-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1) 20%, rgba(0,0,0,1) 80%, rgba(0,0,0,0));
 }
 
+ .glow-image {
+  filter: drop-shadow(0 0 2px rgba(252, 251, 251, 0.8));
+}
+
 img {
   mix-blend-mode: multiply;
 
