--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,8 @@
   filter: drop-shadow(0 0 2px rgba(252, 251, 251, 0.8));
 }
 
+
+
 /* img {
   mix-blend-mode: multiply;
 
@@ -51,7 +53,7 @@ h1,h2,h3 {
         align-items: center;
         justify-content: center;
         padding: 60px 20px;
-        background-color: #f8f9fa;
+        /* background-color: #f8f9fa; */
         overflow: hidden;
         z-index: 1;
       }
